--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --cor-destaque: #ED145B;
-    --cor-gradiente-preto: linear-gradient(113deg, #000 0%, #1E2021 44.96%, #1E2022 100%);
+    --cor-destaque: #eae8ff;
+    --cor-gradiente-preto: linear-gradient(113deg, #8f0606 0%, #a9e2ff 44.96%, #6d2497 100%);
 }
 
 * {
@@ -67,7 +67,7 @@ h1 {
     border-radius: 0.5rem;
     border: none;
     background: var(--cor-destaque);
-    color: #000;
+    color: #17089e;
     font-size: 2.5rem;
     font-weight: 500;
     line-height: normal;
