--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --cor-destaque: #eae8ff;
-    --cor-gradiente-preto: linear-gradient(113deg, #8f0606 0%, #a9e2ff 44.96%, #6d2497 100%);
+    --cor-destaque: #ffd4e3;
+    --cor-gradiente: linear-gradient(113deg, #a81010 0%, #ace1fc 44.96%, #6e26a8 100%);
 }
 
 * {
@@ -16,7 +16,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 16px 21px 18px 21px;
-    background: var(--cor-gradiente-preto);
+    background: var(--cor-gradiente);
     height: 100vh;
     flex-direction: column;
 }
